<resources>
    <string name="app_name">BookHub</string>
    <string name="dashboard">Dashboard</string>
    <string name="favourites">Favourites</string>
    <string name="profile">Profile</string>
    <string name="about">About App</string>
    <string name="navigation_drawer">Navigation Drawer</string>
    <string name="open_drawer">Open Drawer</string>
    <string name="close_drawer">Close Drawer</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="dashboard_fragment">Dashboard Fragment</string>
    <string name="favourites_fragment">Favorites Fragment</string>
    <string name="profile_fragment">Profile Fragment</string>
    <string name="about_fragment">About App Fragment</string>
    <string name="enter_username">Enter Username</string>
    <string name="log_in">Login</string>
    <string name="enter_password">Enter Password</string>
    <string name="list_item">List Item</string>
    <string name="author_name">Name of the Author</string>
    <string name="book_price">Rs. 299</string>
    <string name="_4_5">4.5</string>
    <string name="internet_check">Check Internet Connectivity</string>
    <string name="add_to_favorites">Add to Favorites</string>
    <string name="about_the_book">About the book:</string>
    <string name="action_sort">Sort</string>
</resources>