<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="6dp"
    android:background="#fff"
    app:cardCornerRadius="4dp">

    <RelativeLayout
        android:id="@+id/recyclerListRowItem"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#fff">

        <ImageView
            android:id="@+id/imgBookFront"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_margin="20dp"
            android:scaleType="centerCrop"
            android:src="@mipmap/ic_launcher" />

        <TextView
            android:id="@+id/txtBookName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_toEndOf="@+id/imgBookFront"
            android:text="@string/list_item"
            android:textColor="#000"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtAuthorName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txtBookName"
            android:layout_marginHorizontal="10dp"
            android:layout_toEndOf="@+id/imgBookFront"
            android:text="@string/author_name" />

        <TextView
            android:id="@+id/txtBookPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txtAuthorName"
            android:layout_margin="10dp"
            android:layout_toEndOf="@+id/imgBookFront"
            android:text="@string/book_price"
            android:textColor="@color/colorAccent"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtBookRating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_margin="10dp"
            android:drawableLeft="@drawable/ic_ratings"
            android:drawablePadding="4dp"
            android:padding="4dp"
            android:text="@string/_4_5"
            android:textColor="#ffca28"
            android:textSize="15sp"
            android:textStyle="bold"></TextView>
    </RelativeLayout>
</androidx.cardview.widget.CardView>