<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".fragment.ProfileFragment">

    <TextView
        android:fontFamily="sans-serif-smallcaps"
        android:id="@+id/txtLogin"
        android:textColor="#fff"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:text="@string/log_in"
        android:textSize="40sp"
        android:textStyle="bold"/>

    <EditText
        android:id="@+id/etUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtLogin"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="40dp"
        android:background="#fff"
        android:hint="@string/enter_username"
        android:padding="5dp"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etUsername"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="5dp"
        android:background="#fff"
        android:hint="@string/enter_password"
        android:padding="5dp"
        android:inputType="textPassword"
        android:textSize="18sp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etPassword"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:background="@color/colorButton"
        android:text="@string/log_in"
        android:textColor="#fff" />
</RelativeLayout>